parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLOR
    COMMENT
    NEW_LINE
    STRING_TYPE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID SEMIC dec_variables pn_GOTOprincipal dec_funciones principal
Rule 2     dec_variables -> VARIABLES dec_variables2
Rule 3     dec_variables -> empty
Rule 4     dec_variables2 -> tipo COLON lista_ids SEMIC dec_variables3
Rule 5     dec_variables3 -> dec_variables2
Rule 6     dec_variables3 -> empty
Rule 7     lista_ids -> ID pn_AddVariable DecVarDim lista_ids2
Rule 8     lista_ids2 -> COMMA lista_ids
Rule 9     lista_ids2 -> empty
Rule 10    DecVarDim -> DecVarDim2 pn_VarDim
Rule 11    DecVarDim -> empty
Rule 12    DecVarDim2 -> LBRACK pn_VarDim2 INT_CTE pn_VarDim3 RBRACK
Rule 13    tipo -> INT_TYPE pn_SetCurrentType
Rule 14    tipo -> CHAR_TYPE pn_SetCurrentType
Rule 15    tipo -> FLOAT_TYPE pn_SetCurrentType
Rule 16    dec_funciones -> dec_funciones2 dec_funciones
Rule 17    dec_funciones -> empty
Rule 18    dec_funciones2 -> FUNCION tipo_func ID pn_AddFunc LPAREN dec_funcion_param RPAREN pn_Funcion2 dec_variables bloque pn_Funcion3
Rule 19    tipo_func -> VOID pn_SetCurrentType
Rule 20    tipo_func -> tipo
Rule 21    dec_funcion_param -> lista_parametros
Rule 22    dec_funcion_param -> empty
Rule 23    lista_parametros -> tipo ID pn_Funcion1 lista_parametros2
Rule 24    lista_parametros2 -> COMMA lista_parametros
Rule 25    lista_parametros2 -> empty
Rule 26    principal -> PRINCIPAL pn_Principal1 LPAREN RPAREN bloque
Rule 27    bloque -> LCURLY estatutos RCURLY
Rule 28    estatutos -> estatuto estatutos
Rule 29    estatutos -> empty
Rule 30    estatuto -> asignacion
Rule 31    estatuto -> condicion
Rule 32    estatuto -> regresa
Rule 33    estatuto -> loop_condicional
Rule 34    estatuto -> loop_no_condicional
Rule 35    estatuto -> llamada_funcion
Rule 36    estatuto -> escritura
Rule 37    estatuto -> lectura
Rule 38    estatuto -> funcion_especial_void
Rule 39    funcion_especial_void -> LINEA pn_FuncionEspecial LPAREN pn_Expresion6 exp COMMA direccion RPAREN pn_Expresion7 SEMIC pn_FuncionEspecial2
Rule 40    funcion_especial_void -> PUNTO pn_FuncionEspecial LPAREN pn_Expresion6 exp COMMA exp RPAREN pn_Expresion7 SEMIC pn_FuncionEspecial2
Rule 41    funcion_especial_void -> CIRCULO pn_FuncionEspecial LPAREN pn_Expresion6 exp RPAREN pn_Expresion7 SEMIC pn_FuncionEspecial2
Rule 42    funcion_especial_void -> ARCO pn_FuncionEspecial LPAREN pn_Expresion6 exp COMMA exp RPAREN pn_Expresion7 SEMIC pn_FuncionEspecial2
Rule 43    funcion_especial_void -> PENUP pn_FuncionEspecial LPAREN RPAREN SEMIC pn_FuncionEspecial2
Rule 44    funcion_especial_void -> PENDOWN pn_FuncionEspecial LPAREN RPAREN SEMIC pn_FuncionEspecial2
Rule 45    funcion_especial_void -> GROSOR pn_FuncionEspecial LPAREN pn_Expresion6 exp RPAREN pn_Expresion7 SEMIC pn_FuncionEspecial2
Rule 46    funcion_especial_void -> LIMPIAR pn_FuncionEspecial LPAREN RPAREN SEMIC pn_FuncionEspecial2
Rule 47    direccion -> FORWARD pn_SetDireccion
Rule 48    direccion -> BACKWARD pn_SetDireccion
Rule 49    direccion -> RIGHTTURN pn_SetDireccion
Rule 50    direccion -> LEFTTURN pn_SetDireccion
Rule 51    asignacion -> variable ASSIGN pn_Secuencial1 expresion SEMIC pn_Secuencial2
Rule 52    ctes -> CHAR_CTE pn_CTEChar
Rule 53    ctes -> STRING_CTE pn_CTEString
Rule 54    ctes -> MINUS_OP pn_CTENeg num
Rule 55    ctes -> num
Rule 56    num -> INT_CTE pn_CTEInt
Rule 57    num -> FLOAT_CTE pn_CTEFloat
Rule 58    variable -> ID pn_Expresion1 varDim
Rule 59    varDim -> LBRACK expresion RBRACK
Rule 60    varDim -> empty
Rule 61    condicion -> SI LPAREN expresion RPAREN pn_Condicion1 ENTONCES bloque else pn_Condicion2
Rule 62    else -> SINO pn_Condicion3 bloque
Rule 63    else -> empty
Rule 64    loop_condicional -> MIENTRAS pn_loop_condicional1 LPAREN expresion RPAREN pn_loop_condicional2 HACER bloque pn_loop_condicional3
Rule 65    loop_no_condicional -> DESDE pn_loop_no_condicional1 variable ASSIGN pn_Secuencial1 exp pn_loop_no_condicional2 HASTA pn_loop_no_condicional3 exp pn_loop_no_condicional4 HACER bloque pn_loop_no_condicional5
Rule 66    varLectura -> ID pn_Expresion1 varLectura2
Rule 67    varLectura2 -> COMMA pn_Secuencial4 varLectura
Rule 68    varLectura2 -> empty pn_Secuencial4
Rule 69    lectura -> LEE pn_Secuencial3 LPAREN varLectura RPAREN SEMIC pn_Secuencial5
Rule 70    llamada_param -> expresion pn_FuncionLlamada2 llamada_param2
Rule 71    llamada_param -> empty
Rule 72    llamada_param2 -> COMMA llamada_param
Rule 73    llamada_param2 -> empty
Rule 74    llamada_funcion -> ID pn_FuncionLlamada1 LPAREN pn_Expresion6 llamada_param RPAREN pn_Expresion7 pn_FuncionLlamada3 SEMIC
Rule 75    llamada_funcion -> ID pn_FuncionLlamada1 LPAREN pn_Expresion6 llamada_param RPAREN pn_Expresion7 pn_FuncionLlamada3
Rule 76    regresa -> REGRESA pn_Secuencial3 LPAREN exp RPAREN pn_Regresa SEMIC
Rule 77    escritura -> ESCRIBE pn_Secuencial3 LPAREN escritura2 RPAREN SEMIC pn_Secuencial5
Rule 78    escritura2 -> STRING_CTE pn_Secuencial4 escritura3
Rule 79    escritura2 -> exp pn_Secuencial4 escritura3
Rule 80    escritura3 -> COMMA escritura2
Rule 81    escritura3 -> empty
Rule 82    expresion -> mega_exp expresion1
Rule 83    expresion1 -> ASSIGN expresion
Rule 84    expresion1 -> empty
Rule 85    mega_exp -> super_exp meg
Rule 86    meg -> op_l pn_Expresion10 mega_exp pn_Expresion11
Rule 87    meg -> empty
Rule 88    op_l -> AND_LOG
Rule 89    op_l -> OR_LOG
Rule 90    super_exp -> exp sp
Rule 91    sp -> op_r exp pn_Expresion9
Rule 92    sp -> empty
Rule 93    op_r -> LT_LOG pn_Expresion8
Rule 94    op_r -> GT_LOG pn_Expresion8
Rule 95    op_r -> LTE_LOG pn_Expresion8
Rule 96    op_r -> GTE_LOG pn_Expresion8
Rule 97    op_r -> NE_LOG pn_Expresion8
Rule 98    op_r -> EQUAL_LOG pn_Expresion8
Rule 99    exp -> termino pn_Expresion4 exp1
Rule 100   exp1 -> op_a exp
Rule 101   exp1 -> empty
Rule 102   op_a -> PLUS_OP pn_Expresion2
Rule 103   op_a -> MINUS_OP pn_Expresion2
Rule 104   termino -> factor pn_Expresion5 term
Rule 105   term -> op_a1 termino
Rule 106   term -> empty
Rule 107   op_a1 -> MULT_OP pn_Expresion3
Rule 108   op_a1 -> DIV_OP pn_Expresion3
Rule 109   factor -> ctes
Rule 110   factor -> LPAREN pn_Expresion6 exp RPAREN pn_Expresion7
Rule 111   factor -> variable
Rule 112   factor -> llamada_funcion
Rule 113   empty -> <empty>
Rule 114   pn_GOTOprincipal -> <empty>
Rule 115   pn_Principal1 -> <empty>
Rule 116   pn_AddFunc -> <empty>
Rule 117   pn_Funcion1 -> <empty>
Rule 118   pn_Funcion2 -> <empty>
Rule 119   pn_Funcion3 -> <empty>
Rule 120   pn_SetDireccion -> <empty>
Rule 121   pn_FuncionEspecial -> <empty>
Rule 122   pn_FuncionEspecial2 -> <empty>
Rule 123   pn_FuncionLlamada1 -> <empty>
Rule 124   pn_FuncionLlamada2 -> <empty>
Rule 125   pn_FuncionLlamada3 -> <empty>
Rule 126   pn_CTENeg -> <empty>
Rule 127   pn_CTEInt -> <empty>
Rule 128   pn_CTEFloat -> <empty>
Rule 129   pn_CTEChar -> <empty>
Rule 130   pn_CTEString -> <empty>
Rule 131   pn_Expresion1 -> <empty>
Rule 132   pn_Expresion2 -> <empty>
Rule 133   pn_Expresion3 -> <empty>
Rule 134   pn_Expresion4 -> <empty>
Rule 135   pn_Expresion5 -> <empty>
Rule 136   pn_Expresion6 -> <empty>
Rule 137   pn_Expresion7 -> <empty>
Rule 138   pn_Expresion8 -> <empty>
Rule 139   pn_Expresion9 -> <empty>
Rule 140   pn_Expresion10 -> <empty>
Rule 141   pn_Expresion11 -> <empty>
Rule 142   pn_Secuencial1 -> <empty>
Rule 143   pn_Secuencial2 -> <empty>
Rule 144   pn_Secuencial3 -> <empty>
Rule 145   pn_Secuencial4 -> <empty>
Rule 146   pn_Secuencial5 -> <empty>
Rule 147   pn_Regresa -> <empty>
Rule 148   pn_Condicion1 -> <empty>
Rule 149   pn_Condicion2 -> <empty>
Rule 150   pn_Condicion3 -> <empty>
Rule 151   pn_loop_condicional1 -> <empty>
Rule 152   pn_loop_condicional2 -> <empty>
Rule 153   pn_loop_condicional3 -> <empty>
Rule 154   pn_loop_no_condicional1 -> <empty>
Rule 155   pn_loop_no_condicional2 -> <empty>
Rule 156   pn_loop_no_condicional3 -> <empty>
Rule 157   pn_loop_no_condicional4 -> <empty>
Rule 158   pn_loop_no_condicional5 -> <empty>
Rule 159   pn_SetCurrentType -> <empty>
Rule 160   pn_AddVariable -> <empty>
Rule 161   pn_Renglones -> <empty>
Rule 162   pn_VarDim2 -> <empty>
Rule 163   pn_VarDim3 -> <empty>
Rule 164   pn_VarDim -> <empty>
Rule 165   pn_DimAccess -> <empty>
Rule 166   pn_AccederArreglo -> <empty>

Terminals, with rules where they appear

AND_LOG              : 88
ARCO                 : 42
ASSIGN               : 51 65 83
BACKWARD             : 48
CHAR_CTE             : 52
CHAR_TYPE            : 14
CIRCULO              : 41
COLON                : 4
COLOR                : 
COMMA                : 8 24 39 40 42 67 72 80
COMMENT              : 
DESDE                : 65
DIV_OP               : 108
ENTONCES             : 61
EQUAL_LOG            : 98
ESCRIBE              : 77
FLOAT_CTE            : 57
FLOAT_TYPE           : 15
FORWARD              : 47
FUNCION              : 18
GROSOR               : 45
GTE_LOG              : 96
GT_LOG               : 94
HACER                : 64 65
HASTA                : 65
ID                   : 1 7 18 23 58 66 74 75
INT_CTE              : 12 56
INT_TYPE             : 13
LBRACK               : 12 59
LCURLY               : 27
LEE                  : 69
LEFTTURN             : 50
LIMPIAR              : 46
LINEA                : 39
LPAREN               : 18 26 39 40 41 42 43 44 45 46 61 64 69 74 75 76 77 110
LTE_LOG              : 95
LT_LOG               : 93
MIENTRAS             : 64
MINUS_OP             : 54 103
MULT_OP              : 107
NEW_LINE             : 
NE_LOG               : 97
OR_LOG               : 89
PENDOWN              : 44
PENUP                : 43
PLUS_OP              : 102
PRINCIPAL            : 26
PROGRAMA             : 1
PUNTO                : 40
RBRACK               : 12 59
RCURLY               : 27
REGRESA              : 76
RIGHTTURN            : 49
RPAREN               : 18 26 39 40 41 42 43 44 45 46 61 64 69 74 75 76 77 110
SEMIC                : 1 4 39 40 41 42 43 44 45 46 51 69 74 76 77
SI                   : 61
SINO                 : 62
STRING_CTE           : 53 78
STRING_TYPE          : 
VARIABLES            : 2
VOID                 : 19
error                : 

Nonterminals, with rules where they appear

DecVarDim            : 7
DecVarDim2           : 10
asignacion           : 30
bloque               : 18 26 61 62 64 65
condicion            : 31
ctes                 : 109
dec_funcion_param    : 18
dec_funciones        : 1 16
dec_funciones2       : 16
dec_variables        : 1 18
dec_variables2       : 2 5
dec_variables3       : 4
direccion            : 39
else                 : 61
empty                : 3 6 9 11 17 22 25 29 60 63 68 71 73 81 84 87 92 101 106
escritura            : 36
escritura2           : 77 80
escritura3           : 78 79
estatuto             : 28
estatutos            : 27 28
exp                  : 39 40 40 41 42 42 45 65 65 76 79 90 91 100 110
exp1                 : 99
expresion            : 51 59 61 64 70 83
expresion1           : 82
factor               : 104
funcion_especial_void : 38
lectura              : 37
lista_ids            : 4 8
lista_ids2           : 7
lista_parametros     : 21 24
lista_parametros2    : 23
llamada_funcion      : 35 112
llamada_param        : 72 74 75
llamada_param2       : 70
loop_condicional     : 33
loop_no_condicional  : 34
meg                  : 85
mega_exp             : 82 86
num                  : 54 55
op_a                 : 100
op_a1                : 105
op_l                 : 86
op_r                 : 91
pn_AccederArreglo    : 
pn_AddFunc           : 18
pn_AddVariable       : 7
pn_CTEChar           : 52
pn_CTEFloat          : 57
pn_CTEInt            : 56
pn_CTENeg            : 54
pn_CTEString         : 53
pn_Condicion1        : 61
pn_Condicion2        : 61
pn_Condicion3        : 62
pn_DimAccess         : 
pn_Expresion1        : 58 66
pn_Expresion10       : 86
pn_Expresion11       : 86
pn_Expresion2        : 102 103
pn_Expresion3        : 107 108
pn_Expresion4        : 99
pn_Expresion5        : 104
pn_Expresion6        : 39 40 41 42 45 74 75 110
pn_Expresion7        : 39 40 41 42 45 74 75 110
pn_Expresion8        : 93 94 95 96 97 98
pn_Expresion9        : 91
pn_Funcion1          : 23
pn_Funcion2          : 18
pn_Funcion3          : 18
pn_FuncionEspecial   : 39 40 41 42 43 44 45 46
pn_FuncionEspecial2  : 39 40 41 42 43 44 45 46
pn_FuncionLlamada1   : 74 75
pn_FuncionLlamada2   : 70
pn_FuncionLlamada3   : 74 75
pn_GOTOprincipal     : 1
pn_Principal1        : 26
pn_Regresa           : 76
pn_Renglones         : 
pn_Secuencial1       : 51 65
pn_Secuencial2       : 51
pn_Secuencial3       : 69 76 77
pn_Secuencial4       : 67 68 78 79
pn_Secuencial5       : 69 77
pn_SetCurrentType    : 13 14 15 19
pn_SetDireccion      : 47 48 49 50
pn_VarDim            : 10
pn_VarDim2           : 12
pn_VarDim3           : 12
pn_loop_condicional1 : 64
pn_loop_condicional2 : 64
pn_loop_condicional3 : 64
pn_loop_no_condicional1 : 65
pn_loop_no_condicional2 : 65
pn_loop_no_condicional3 : 65
pn_loop_no_condicional4 : 65
pn_loop_no_condicional5 : 65
principal            : 1
programa             : 0
regresa              : 32
sp                   : 90
super_exp            : 85
term                 : 104
termino              : 99 105
tipo                 : 4 20 23
tipo_func            : 18
varDim               : 58
varLectura           : 67 69
varLectura2          : 66
variable             : 51 65 111

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID SEMIC dec_variables pn_GOTOprincipal dec_funciones principal

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID SEMIC dec_variables pn_GOTOprincipal dec_funciones principal

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . SEMIC dec_variables pn_GOTOprincipal dec_funciones principal

    SEMIC           shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID SEMIC . dec_variables pn_GOTOprincipal dec_funciones principal
    (2) dec_variables -> . VARIABLES dec_variables2
    (3) dec_variables -> . empty
    (113) empty -> .

    VARIABLES       shift and go to state 6
    FUNCION         reduce using rule 113 (empty -> .)
    PRINCIPAL       reduce using rule 113 (empty -> .)

    dec_variables                  shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) programa -> PROGRAMA ID SEMIC dec_variables . pn_GOTOprincipal dec_funciones principal
    (114) pn_GOTOprincipal -> .

    FUNCION         reduce using rule 114 (pn_GOTOprincipal -> .)
    PRINCIPAL       reduce using rule 114 (pn_GOTOprincipal -> .)

    pn_GOTOprincipal               shift and go to state 8

state 6

    (2) dec_variables -> VARIABLES . dec_variables2
    (4) dec_variables2 -> . tipo COLON lista_ids SEMIC dec_variables3
    (13) tipo -> . INT_TYPE pn_SetCurrentType
    (14) tipo -> . CHAR_TYPE pn_SetCurrentType
    (15) tipo -> . FLOAT_TYPE pn_SetCurrentType

    INT_TYPE        shift and go to state 11
    CHAR_TYPE       shift and go to state 12
    FLOAT_TYPE      shift and go to state 13

    dec_variables2                 shift and go to state 9
    tipo                           shift and go to state 10

state 7

    (3) dec_variables -> empty .

    FUNCION         reduce using rule 3 (dec_variables -> empty .)
    PRINCIPAL       reduce using rule 3 (dec_variables -> empty .)
    LCURLY          reduce using rule 3 (dec_variables -> empty .)


state 8

    (1) programa -> PROGRAMA ID SEMIC dec_variables pn_GOTOprincipal . dec_funciones principal
    (16) dec_funciones -> . dec_funciones2 dec_funciones
    (17) dec_funciones -> . empty
    (18) dec_funciones2 -> . FUNCION tipo_func ID pn_AddFunc LPAREN dec_funcion_param RPAREN pn_Funcion2 dec_variables bloque pn_Funcion3
    (113) empty -> .

    FUNCION         shift and go to state 17
    PRINCIPAL       reduce using rule 113 (empty -> .)

    dec_funciones                  shift and go to state 14
    dec_funciones2                 shift and go to state 15
    empty                          shift and go to state 16

state 9

    (2) dec_variables -> VARIABLES dec_variables2 .

    FUNCION         reduce using rule 2 (dec_variables -> VARIABLES dec_variables2 .)
    PRINCIPAL       reduce using rule 2 (dec_variables -> VARIABLES dec_variables2 .)
    LCURLY          reduce using rule 2 (dec_variables -> VARIABLES dec_variables2 .)


state 10

    (4) dec_variables2 -> tipo . COLON lista_ids SEMIC dec_variables3

    COLON           shift and go to state 18


state 11

    (13) tipo -> INT_TYPE . pn_SetCurrentType
    (159) pn_SetCurrentType -> .

    COLON           reduce using rule 159 (pn_SetCurrentType -> .)
    ID              reduce using rule 159 (pn_SetCurrentType -> .)

    pn_SetCurrentType              shift and go to state 19

state 12

    (14) tipo -> CHAR_TYPE . pn_SetCurrentType
    (159) pn_SetCurrentType -> .

    COLON           reduce using rule 159 (pn_SetCurrentType -> .)
    ID              reduce using rule 159 (pn_SetCurrentType -> .)

    pn_SetCurrentType              shift and go to state 20

state 13

    (15) tipo -> FLOAT_TYPE . pn_SetCurrentType
    (159) pn_SetCurrentType -> .

    COLON           reduce using rule 159 (pn_SetCurrentType -> .)
    ID              reduce using rule 159 (pn_SetCurrentType -> .)

    pn_SetCurrentType              shift and go to state 21

state 14

    (1) programa -> PROGRAMA ID SEMIC dec_variables pn_GOTOprincipal dec_funciones . principal
    (26) principal -> . PRINCIPAL pn_Principal1 LPAREN RPAREN bloque

    PRINCIPAL       shift and go to state 23

    principal                      shift and go to state 22

state 15

    (16) dec_funciones -> dec_funciones2 . dec_funciones
    (16) dec_funciones -> . dec_funciones2 dec_funciones
    (17) dec_funciones -> . empty
    (18) dec_funciones2 -> . FUNCION tipo_func ID pn_AddFunc LPAREN dec_funcion_param RPAREN pn_Funcion2 dec_variables bloque pn_Funcion3
    (113) empty -> .

    FUNCION         shift and go to state 17
    PRINCIPAL       reduce using rule 113 (empty -> .)

    dec_funciones2                 shift and go to state 15
    dec_funciones                  shift and go to state 24
    empty                          shift and go to state 16

state 16

    (17) dec_funciones -> empty .

    PRINCIPAL       reduce using rule 17 (dec_funciones -> empty .)


state 17

    (18) dec_funciones2 -> FUNCION . tipo_func ID pn_AddFunc LPAREN dec_funcion_param RPAREN pn_Funcion2 dec_variables bloque pn_Funcion3
    (19) tipo_func -> . VOID pn_SetCurrentType
    (20) tipo_func -> . tipo
    (13) tipo -> . INT_TYPE pn_SetCurrentType
    (14) tipo -> . CHAR_TYPE pn_SetCurrentType
    (15) tipo -> . FLOAT_TYPE pn_SetCurrentType

    VOID            shift and go to state 26
    INT_TYPE        shift and go to state 11
    CHAR_TYPE       shift and go to state 12
    FLOAT_TYPE      shift and go to state 13

    tipo_func                      shift and go to state 25
    tipo                           shift and go to state 27

state 18

    (4) dec_variables2 -> tipo COLON . lista_ids SEMIC dec_variables3
    (7) lista_ids -> . ID pn_AddVariable DecVarDim lista_ids2

    ID              shift and go to state 29

    lista_ids                      shift and go to state 28

state 19

    (13) tipo -> INT_TYPE pn_SetCurrentType .

    COLON           reduce using rule 13 (tipo -> INT_TYPE pn_SetCurrentType .)
    ID              reduce using rule 13 (tipo -> INT_TYPE pn_SetCurrentType .)


state 20

    (14) tipo -> CHAR_TYPE pn_SetCurrentType .

    COLON           reduce using rule 14 (tipo -> CHAR_TYPE pn_SetCurrentType .)
    ID              reduce using rule 14 (tipo -> CHAR_TYPE pn_SetCurrentType .)


state 21

    (15) tipo -> FLOAT_TYPE pn_SetCurrentType .

    COLON           reduce using rule 15 (tipo -> FLOAT_TYPE pn_SetCurrentType .)
    ID              reduce using rule 15 (tipo -> FLOAT_TYPE pn_SetCurrentType .)


state 22

    (1) programa -> PROGRAMA ID SEMIC dec_variables pn_GOTOprincipal dec_funciones principal .

    $end            reduce using rule 1 (programa -> PROGRAMA ID SEMIC dec_variables pn_GOTOprincipal dec_funciones principal .)


state 23

    (26) principal -> PRINCIPAL . pn_Principal1 LPAREN RPAREN bloque
    (115) pn_Principal1 -> .

    LPAREN          reduce using rule 115 (pn_Principal1 -> .)

    pn_Principal1                  shift and go to state 30

state 24

    (16) dec_funciones -> dec_funciones2 dec_funciones .

    PRINCIPAL       reduce using rule 16 (dec_funciones -> dec_funciones2 dec_funciones .)


state 25

    (18) dec_funciones2 -> FUNCION tipo_func . ID pn_AddFunc LPAREN dec_funcion_param RPAREN pn_Funcion2 dec_variables bloque pn_Funcion3

    ID              shift and go to state 31


state 26

    (19) tipo_func -> VOID . pn_SetCurrentType
    (159) pn_SetCurrentType -> .

    ID              reduce using rule 159 (pn_SetCurrentType -> .)

    pn_SetCurrentType              shift and go to state 32

state 27

    (20) tipo_func -> tipo .

    ID              reduce using rule 20 (tipo_func -> tipo .)


state 28

    (4) dec_variables2 -> tipo COLON lista_ids . SEMIC dec_variables3

    SEMIC           shift and go to state 33


state 29

    (7) lista_ids -> ID . pn_AddVariable DecVarDim lista_ids2
    (160) pn_AddVariable -> .

    LBRACK          reduce using rule 160 (pn_AddVariable -> .)
    COMMA           reduce using rule 160 (pn_AddVariable -> .)
    SEMIC           reduce using rule 160 (pn_AddVariable -> .)

    pn_AddVariable                 shift and go to state 34

state 30

    (26) principal -> PRINCIPAL pn_Principal1 . LPAREN RPAREN bloque

    LPAREN          shift and go to state 35


state 31

    (18) dec_funciones2 -> FUNCION tipo_func ID . pn_AddFunc LPAREN dec_funcion_param RPAREN pn_Funcion2 dec_variables bloque pn_Funcion3
    (116) pn_AddFunc -> .

    LPAREN          reduce using rule 116 (pn_AddFunc -> .)

    pn_AddFunc                     shift and go to state 36

state 32

    (19) tipo_func -> VOID pn_SetCurrentType .

    ID              reduce using rule 19 (tipo_func -> VOID pn_SetCurrentType .)


state 33

    (4) dec_variables2 -> tipo COLON lista_ids SEMIC . dec_variables3
    (5) dec_variables3 -> . dec_variables2
    (6) dec_variables3 -> . empty
    (4) dec_variables2 -> . tipo COLON lista_ids SEMIC dec_variables3
    (113) empty -> .
    (13) tipo -> . INT_TYPE pn_SetCurrentType
    (14) tipo -> . CHAR_TYPE pn_SetCurrentType
    (15) tipo -> . FLOAT_TYPE pn_SetCurrentType

    FUNCION         reduce using rule 113 (empty -> .)
    PRINCIPAL       reduce using rule 113 (empty -> .)
    LCURLY          reduce using rule 113 (empty -> .)
    INT_TYPE        shift and go to state 11
    CHAR_TYPE       shift and go to state 12
    FLOAT_TYPE      shift and go to state 13

    tipo                           shift and go to state 10
    dec_variables3                 shift and go to state 37
    dec_variables2                 shift and go to state 38
    empty                          shift and go to state 39

state 34

    (7) lista_ids -> ID pn_AddVariable . DecVarDim lista_ids2
    (10) DecVarDim -> . DecVarDim2 pn_VarDim
    (11) DecVarDim -> . empty
    (12) DecVarDim2 -> . LBRACK pn_VarDim2 INT_CTE pn_VarDim3 RBRACK
    (113) empty -> .

    LBRACK          shift and go to state 43
    COMMA           reduce using rule 113 (empty -> .)
    SEMIC           reduce using rule 113 (empty -> .)

    DecVarDim                      shift and go to state 40
    DecVarDim2                     shift and go to state 41
    empty                          shift and go to state 42

state 35

    (26) principal -> PRINCIPAL pn_Principal1 LPAREN . RPAREN bloque

    RPAREN          shift and go to state 44


state 36

    (18) dec_funciones2 -> FUNCION tipo_func ID pn_AddFunc . LPAREN dec_funcion_param RPAREN pn_Funcion2 dec_variables bloque pn_Funcion3

    LPAREN          shift and go to state 45


state 37

    (4) dec_variables2 -> tipo COLON lista_ids SEMIC dec_variables3 .

    FUNCION         reduce using rule 4 (dec_variables2 -> tipo COLON lista_ids SEMIC dec_variables3 .)
    PRINCIPAL       reduce using rule 4 (dec_variables2 -> tipo COLON lista_ids SEMIC dec_variables3 .)
    LCURLY          reduce using rule 4 (dec_variables2 -> tipo COLON lista_ids SEMIC dec_variables3 .)


state 38

    (5) dec_variables3 -> dec_variables2 .

    FUNCION         reduce using rule 5 (dec_variables3 -> dec_variables2 .)
    PRINCIPAL       reduce using rule 5 (dec_variables3 -> dec_variables2 .)
    LCURLY          reduce using rule 5 (dec_variables3 -> dec_variables2 .)


state 39

    (6) dec_variables3 -> empty .

    FUNCION         reduce using rule 6 (dec_variables3 -> empty .)
    PRINCIPAL       reduce using rule 6 (dec_variables3 -> empty .)
    LCURLY          reduce using rule 6 (dec_variables3 -> empty .)


state 40

    (7) lista_ids -> ID pn_AddVariable DecVarDim . lista_ids2
    (8) lista_ids2 -> . COMMA lista_ids
    (9) lista_ids2 -> . empty
    (113) empty -> .

    COMMA           shift and go to state 47
    SEMIC           reduce using rule 113 (empty -> .)

    lista_ids2                     shift and go to state 46
    empty                          shift and go to state 48

state 41

    (10) DecVarDim -> DecVarDim2 . pn_VarDim
    (164) pn_VarDim -> .

    COMMA           reduce using rule 164 (pn_VarDim -> .)
    SEMIC           reduce using rule 164 (pn_VarDim -> .)

    pn_VarDim                      shift and go to state 49

state 42

    (11) DecVarDim -> empty .

    COMMA           reduce using rule 11 (DecVarDim -> empty .)
    SEMIC           reduce using rule 11 (DecVarDim -> empty .)


state 43

    (12) DecVarDim2 -> LBRACK . pn_VarDim2 INT_CTE pn_VarDim3 RBRACK
    (162) pn_VarDim2 -> .

    INT_CTE         reduce using rule 162 (pn_VarDim2 -> .)

    pn_VarDim2                     shift and go to state 50

state 44

    (26) principal -> PRINCIPAL pn_Principal1 LPAREN RPAREN . bloque
    (27) bloque -> . LCURLY estatutos RCURLY

    LCURLY          shift and go to state 52

    bloque                         shift and go to state 51

state 45

    (18) dec_funciones2 -> FUNCION tipo_func ID pn_AddFunc LPAREN . dec_funcion_param RPAREN pn_Funcion2 dec_variables bloque pn_Funcion3
    (21) dec_funcion_param -> . lista_parametros
    (22) dec_funcion_param -> . empty
    (23) lista_parametros -> . tipo ID pn_Funcion1 lista_parametros2
    (113) empty -> .
    (13) tipo -> . INT_TYPE pn_SetCurrentType
    (14) tipo -> . CHAR_TYPE pn_SetCurrentType
    (15) tipo -> . FLOAT_TYPE pn_SetCurrentType

    RPAREN          reduce using rule 113 (empty -> .)
    INT_TYPE        shift and go to state 11
    CHAR_TYPE       shift and go to state 12
    FLOAT_TYPE      shift and go to state 13

    dec_funcion_param              shift and go to state 53
    lista_parametros               shift and go to state 54
    empty                          shift and go to state 55
    tipo                           shift and go to state 56

state 46

    (7) lista_ids -> ID pn_AddVariable DecVarDim lista_ids2 .

    SEMIC           reduce using rule 7 (lista_ids -> ID pn_AddVariable DecVarDim lista_ids2 .)


state 47

    (8) lista_ids2 -> COMMA . lista_ids
    (7) lista_ids -> . ID pn_AddVariable DecVarDim lista_ids2

    ID              shift and go to state 29

    lista_ids                      shift and go to state 57

state 48

    (9) lista_ids2 -> empty .

    SEMIC           reduce using rule 9 (lista_ids2 -> empty .)


state 49

    (10) DecVarDim -> DecVarDim2 pn_VarDim .

    COMMA           reduce using rule 10 (DecVarDim -> DecVarDim2 pn_VarDim .)
    SEMIC           reduce using rule 10 (DecVarDim -> DecVarDim2 pn_VarDim .)


state 50

    (12) DecVarDim2 -> LBRACK pn_VarDim2 . INT_CTE pn_VarDim3 RBRACK

    INT_CTE         shift and go to state 58


state 51

    (26) principal -> PRINCIPAL pn_Principal1 LPAREN RPAREN bloque .

    $end            reduce using rule 26 (principal -> PRINCIPAL pn_Principal1 LPAREN RPAREN bloque .)


state 52
